FEAT: added feature for activating user
